[package]
name = "cw721-custom"
version = "1.0.3"
authors = [
  "BHIKTOR"
]
edition = "2018"
description = "custom CW721 - focused on batch operations and custom burning logic"
license = "Apache-2.0"
repository = "https://github.com/BHIIKTOR/cw721-custom"
homepage = ""
documentation = ""

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "artifacts/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cw-utils = "0.13.2"
cosmwasm-std = { version = "1.1.3" }
cosmwasm-schema = "1.1.3"
cw-storage-plus = "1.0.1"
cw2 = "0.13.4"
cw721 = "0.16.0"
cw721-base = { version = "0.16.0", features = [ "library", ] }
schemars = "0.8"
serde = { version = "1.0.130", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.30" }

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0-beta8" }
cw-multi-test = "0.16.2"
