[package]
name = "cw721-custom"
version = "1.0.4"
authors = [
  "BHIKTOR"
]
edition = "2018"
description = "custom CW721 - focused on batch operations and custom burning logic"
license = "Apache-2.0"
repository = "https://github.com/BHIIKTOR/cw721-custom"
homepage = ""
documentation = ""

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "artifacts/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std    = { workspace = true }
cw2             = { workspace = true }
cw721           = { workspace = true }
cw721-base      = { workspace = true }
cw-storage-plus = { workspace = true }
cw-utils        = { workspace = true }
schemars        = { workspace = true }
thiserror       = { workspace = true }
serde           = { workspace = true }

[dev-dependencies]
cw-multi-test   = { workspace = true }
roboto          = { workspace = true }
